<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, VendasMobileActivity!</string>
    <string name="app_name">SCL :: Sistema de Controle de Leite</string>
    <string name="Developer">Sistem2 Informática Ltda</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_cadastro_clientes">CadastroClientesActivity</string>
    <string name="buscar">Buscar</string>
    <string name="salvar">Salvar</string>
    <string name="codbarra">Cod. Barras</string>
    <string name="excluir">Excluir</string>
    <string name="nome">Nome:</string>
    <string name="logradouro">Logradouro:</string>
    <string name="numero">Numero:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="UF">UF:</string>
    <string name="cep">CEP:</string>
    <string name="cancelar">Cancelar</string>
    <string name="tela2">Tela2</string>
    <string name="voltar">Voltar Para HorizontalScrollView</string>
    <string name="Exemplo">Exemplo HorizontalScrollView</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- ################## Cores para o sistema ######################## -->

    <color name="DodgerBlue">#1E90FF</color>
    <color name="DeepSkyBlue">#00BFFF</color>
    <color name="SkyBlue">#87CEEB</color>
    <color name="LightSkyBlue">#87CEFA</color>
    <color name="SteelBlue">#4682B4</color>
    <color name="LightSteelBlue">#B0C4DE</color>
    <color name="LightBlue">#ADD8E6</color>
    <color name="PowderBlue">#B0E0E6</color>
    <color name="PaleTurquoise">#AFEEEE</color>
    <color name="DarkTurquoise">#00CED1</color>
    <color name="MediumTurquoise">#48D1CC</color>
    <color name="Turquoise">#40E0D0</color>
    <color name="Cyan">#00FFFF</color>
    <color name="LightCyan">#E0FFFF</color>
    <color name="CadetBlue">#5F9EA0</color>
    <color name="MediumAquamarine">#66CDAA</color>
    <color name="Aquamarine">#7FFFD4</color>
    <color name="DarkGreen">#006400</color>
    <color name="DarkOliveGreen">#556B2F</color>
    <color name="DarkSeaGreen">#8FBC8F</color>
    <color name="SeaGreen">#2E8B57</color>
    <color name="MediumSeaGreen">#3CB371</color>
    <color name="LightSeaGreen">#20B2AA</color>
    <color name="PaleGreen">#98FB98</color>
    <color name="SpringGreen">#00FF7F</color>
    <color name="LawnGreen">#7CFC00</color>
    <color name="Green">#00FF00</color>
    <color name="Chartreuse">#7FFF00</color>
    <color name="MedSpringGreen">#00FA9A</color>
    <color name="GreenYellow">#ADFF2F</color>
    <color name="LimeGreen">#32CD32</color>
    <color name="YellowGreen">#9ACD32</color>
    <color name="ForestGreen">#228B22</color>
    <color name="OliveDrab">#6B8E23</color>
    <color name="DarkKhaki">#BDB76B</color>
    <color name="PaleGoldenrod">#EEE8AA</color>
    <color name="LtGoldenrodYello">#FAFAD2</color>
    <color name="LightYellow">#FFFFE0</color>
    <color name="Yellow">#FFFF00</color>
    <color name="Gold">#FFD700</color>
    <color name="LightGoldenrod">#EEDD82</color>
    <color name="goldenrod">#DAA520</color>
    <color name="DarkGoldenrod">#B8860B</color>
    <color name="SlateGray4">#6C7B8B</color>
    <color name="LightSteelBlue1">#CAE1FF</color>
    <color name="LightSteelBlue2">#BCD2EE</color>
    <color name="LightSteelBlue3">#A2B5CD</color>
    <color name="LightSteelBlue4">#6E7B8B</color>
    <color name="LightBlue1">#BFEFFF</color>
    <color name="LightBlue2">#B2DFEE</color>
    <color name="LightBlue3">#9AC0CD</color>
    <color name="LightBlue4">#68838B</color>
    <color name="LightCyan1">#E0FFFF</color>
    <color name="LightCyan2">#D1EEEE</color>
    <color name="LightCyan3">#B4CDCD</color>
    <color name="LightCyan4">#7A8B8B</color>
    <color name="Cyan1">#00FFFF</color>
    <color name="Cyan2">#00EEEE</color>
    <color name="Cyan3">#00CDCD</color>
    <color name="Cyan4">#008B8B</color>
    <color name="DarkSlateGray1">#97FFFF</color>
    <color name="DarkSlateGray2">#8DEEEE</color>
    <color name="DarkSlateGray3">#79CDCD</color>
    <color name="DarkSlateGray4">#528B8B</color>
    <color name="Aquamarine1">#7FFFD4</color>
    <color name="Aquamarine2">#76EEC6</color>
    <color name="Aquamarine3">#66CDAA</color>
    <color name="Aquamarine4">#458B74</color>
    <color name="DarkSeaGreen1">#C1FFC1</color>
    <color name="DarkSeaGreen2">#B4EEB4</color>
    <color name="DarkSeaGreen3">#9BCD9B</color>
    <color name="DarkSeaGreen4">#698B69</color>
    <color name="SeaGreen1">#54FF9F</color>
    <color name="SeaGreen2">#4EEE94</color>
    <color name="HotPink3">#CD6090</color>
    <color name="HotPink4">#8B3A62</color>
    <color name="Pink1">#FFB5C5</color>
    <color name="Pink2">#EEA9B8</color>
    <color name="Pink3">#CD919E</color>
    <color name="PaleVioletRed1">#FF82AB</color>
    <color name="PaleVioletRed2">#EE799F</color>
    <color name="PaleVioletRed3">#CD6889</color>
    <color name="PaleVioletRed4">#8B475D</color>
    <color name="Orchid1">#FF83FA</color>
    <color name="Orchid2">#EE7AE9</color>
    <color name="Orchid3">#CD69C9</color>
    <color name="Orchid4">#8B4789</color>
    <color name="Plum1">#FFBBFF</color>
    <color name="Plum2">#EEAEEE</color>
    <color name="Plum3">#CD96CD</color>
    <color name="Plum4">#8B668B</color>
    <color name="MediumOrchid1">#E066FF</color>
    <color name="MediumOrchid2">#D15FEE</color>
    <color name="MediumOrchid3">#B452CD</color>
    <color name="MediumOrchid4">#7A378B</color>
    <color name="DarkOrchid1">#BF3EFF</color>
    <color name="DarkOrchid2">#B23AEE</color>
    <color name="DarkOrchid3">#9A32CD</color>
    <color name="DarkOrchid4">#68228B</color>
    <color name="Purple1">#9B30FF</color>
    <color name="Purple2">#912CEE</color>
    <color name="rple3">#7D26CD</color>
    <color name="Purple4">#551A8B</color>
    <color name="MediumPurple1">#AB82FF</color>
    <color name="MediumPurple2">#9F79EE</color>
    <color name="MediumPurple3">#8968CD</color>
    <color name="MediumPurple4">#5D478B</color>
    <color name="Thistle1">#FFE1FF</color>
    <color name="Thistle2">#EED2EE</color>
    <color name="Thistle3">#CDB5CD</color>
    <color name="Thistle4">#8B7B8B</color>
    <color name="grey11">#1C1C1C</color>
    <color name="grey21">#363636</color>
    <color name="grey31">#4F4F4F</color>
    <color name="grey41">#696969</color>
    <color name="grey51">#828282</color>
    <color name="grey61">#9C9C9C</color>
    <color name="grey71">#B5B5B5</color>
    <color name="gray81">#CFCFCF</color>
    <color name="gray91">#E8E8E8</color>
    <color name="DarkGrey">#A9A9A9</color>
    <color name="Orange1">#FFA500</color>
    <color name="Orange2">#EE9A00</color>
    <color name="Orange3">#CD8500</color>
    <color name="Orange4">#8B5A00</color>
    <color name="DarkOrange1">#FF7F00</color>
    <color name="DarkOrange2">#EE7600</color>
    <color name="DarkOrange3">#CD6600</color>
    <color name="DarkOrange4">#8B4500</color>
    <color name="Coral1">#FF7256</color>
    <color name="Coral2">#EE6A50</color>
    <color name="Coral3">#CD5B45</color>
    <color name="Coral4">#8B3E2F</color>
    <color name="Tomato1">#FF6347</color>
    <color name="Tomato2">#EE5C42</color>
    <color name="Tomato3">#CD4F39</color>
    <color name="Tomato4">#8B3626</color>
    <color name="OrangeRed1">#FF4500</color>
    <color name="OrangeRed2">#EE4000</color>
    <color name="OrangeRed3">#CD3700</color>
    <color name="OrangeRed4">#8B2500</color>
    <color name="Red1">#FF0000</color>
    <color name="Red">#EE0000</color>
    <color name="Red2">#CD0000</color>
    <color name="Red3">#8B0000</color>
    <color name="branco">#FFFFFF</color>
    <color name="preto">#000000</color>
    <color name="DarkSlateGray">#2F4F4F</color>
    <color name="DimGrey">#696969</color>
    <color name="SlateGrey">#708090</color>
    <color name="LightSlateGray">#778899</color>
    <color name="Grey">#BEBEBE</color>
    <color name="LightGray">#D3D3D3</color>
    <color name="MidnightBlue">#191970</color>
    <color name="NavyBlue">#000080</color>
    <color name="CornflowerBlue">#6495ED</color>
    <color name="DarkSlateBlue">#483D8B</color>
    <color name="SlateBlue">#6A5ACD</color>
    <color name="MediumSlateBlue">#7B68EE</color>
    <color name="LightSlateBlue">#8470FF</color>
    <color name="MediumBlue">#0000CD</color>
    <color name="RoyalBlue">#4169E1</color>
    <color name="azul">#0000FF</color>
    <color name="Azure1">#F0FFFF</color>
    <color name="Azure2">#E0EEEE</color>
    <color name="Azure3">#C1CDCD</color>
    <color name="Azure4">#838B8B</color>
    <color name="SlateBlue1">#836FFF</color>
    <color name="SlateBlue2">#7A67EE</color>
    <color name="SlateBlue3">#6959CD</color>
    <color name="SlateBlue4">#473C8B</color>
    <color name="RoyalBlue1">#4876FF</color>
    <color name="RoyalBlue2">#436EEE</color>
    <color name="RoyalBlue3">#3A5FCD</color>
    <color name="RoyalBlue4">#27408B</color>
    <color name="Blue1">#0000FF</color>
    <color name="Blue2">#0000EE</color>
    <color name="Blue3">#0000CD</color>
    <color name="Blue4">#00008B</color>
    <color name="DodgerBlue1">#1E90FF</color>
    <color name="DodgerBlue2">#1C86EE</color>
    <color name="DodgerBlue3">#1874CD</color>
    <color name="DodgerBlue4">#104E8B</color>
    <color name="SteelBlue1">#63B8FF</color>
    <color name="SteelBlue2">#5CACEE</color>
    <color name="SteelBlue3">#4F94CD</color>
    <color name="SteelBlue4">#36648B</color>

    <string name="codigo">Codigo:</string>
    <string name="grupo">Grupos</string>
    <string name="scl">Sistema de Coleta de Leite</string>
    <string name="senha">"Senha: "</string>
    <string name="title_activity_menu_scl">MenuSCLActivity</string>
    <string name="title_activity_produtores">ProdutoresActivity</string>
    <string name="cpf">CPF:</string>
    <string name="insestadual">Ins. Estadual</string>
    <string name="foneresidencial">Telefone:</string>
    <string name="celular">Celular:</string>
    <string name="fone">Tel:</string>
    <string name="telcelular">Cel:</string>
    <string name="foneres">Tel:</string>
    <string name="pesquisar">Pesquisar</string>

</resources>